samples/_failures_safe/1761271033_fb3cdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78f572d8.c: In function ‘main’:
./samples/SAFE/__tmp_78f572d8.c:154:9: error: expected expression at end of input
  154 |         if (
      |         ^~
./samples/SAFE/__tmp_78f572d8.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78f572d8.c:154:9: error: expected declaration or statement at end of input
